Fix but that barely overflows screen on different computer settings

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
 
 #displayBack {
   height: 50px;
-  width: 212px;
+  width: 230px;
   background-color: rgb(199, 199, 199);
   border: solid rgb(56, 71, 73) 3px;
   border-radius: 10px;
